# speclib

./: CMakeLists.txt  README.md
doc/: SpecLib.graffle
include/speclib/: SpecAtomic.h  SpecReal.h  SpecRealInd.h  common_speclib.h  speclib_std.h
tests/basic_tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt
tests/benchmarks/sequential/: CMakeLists.txt
tests/common_files/: common_test.cpp
